STM-CUBE-IDE/.metadata/.plugins/org.eclipse.cdt.ui/STM32407G_BlinkTestV2.build.log
12:56:42 **** Incremental Build of configuration Debug for project STM32407G_BlinkTestV2 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:89:3: warning: data definition has no type or storage class
   89 |   HAL_Init();
      |   ^~~~~~~~
../Core/Src/main.c:89:3: warning: type defaults to 'int' in declaration of 'HAL_Init' [-Wimplicit-int]
../Core/Src/main.c:89:3: error: conflicting types for 'HAL_Init'; have 'int()'
In file included from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:219:19: note: previous declaration of 'HAL_Init' with type 'HAL_StatusTypeDef(void)'
  219 | HAL_StatusTypeDef HAL_Init(void);
      |                   ^~~~~~~~
../Core/Src/main.c:96:3: warning: data definition has no type or storage class
   96 |   SystemClock_Config();
      |   ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:96:3: warning: type defaults to 'int' in declaration of 'SystemClock_Config' [-Wimplicit-int]
../Core/Src/main.c:96:3: error: conflicting types for 'SystemClock_Config'; have 'int()'
../Core/Src/main.c:55:6: note: previous declaration of 'SystemClock_Config' with type 'void(void)'
   55 | void SystemClock_Config(void);
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:103:3: warning: data definition has no type or storage class
  103 |   MX_GPIO_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:103:3: warning: type defaults to 'int' in declaration of 'MX_GPIO_Init' [-Wimplicit-int]
../Core/Src/main.c:103:3: error: conflicting types for 'MX_GPIO_Init'; have 'int()'
../Core/Src/main.c:56:13: note: previous declaration of 'MX_GPIO_Init' with type 'void(void)'
   56 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:104:3: warning: data definition has no type or storage class
  104 |   MX_I2C1_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:104:3: warning: type defaults to 'int' in declaration of 'MX_I2C1_Init' [-Wimplicit-int]
../Core/Src/main.c:104:3: error: conflicting types for 'MX_I2C1_Init'; have 'int()'
../Core/Src/main.c:57:13: note: previous declaration of 'MX_I2C1_Init' with type 'void(void)'
   57 | static void MX_I2C1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:105:3: warning: data definition has no type or storage class
  105 |   MX_I2S3_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:105:3: warning: type defaults to 'int' in declaration of 'MX_I2S3_Init' [-Wimplicit-int]
../Core/Src/main.c:105:3: error: conflicting types for 'MX_I2S3_Init'; have 'int()'
../Core/Src/main.c:58:13: note: previous declaration of 'MX_I2S3_Init' with type 'void(void)'
   58 | static void MX_I2S3_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:106:3: warning: data definition has no type or storage class
  106 |   MX_SPI1_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:106:3: warning: type defaults to 'int' in declaration of 'MX_SPI1_Init' [-Wimplicit-int]
../Core/Src/main.c:106:3: error: conflicting types for 'MX_SPI1_Init'; have 'int()'
../Core/Src/main.c:59:13: note: previous declaration of 'MX_SPI1_Init' with type 'void(void)'
   59 | static void MX_SPI1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:107:3: warning: data definition has no type or storage class
  107 |   MX_USB_HOST_Init();
      |   ^~~~~~~~~~~~~~~~
../Core/Src/main.c:107:3: warning: type defaults to 'int' in declaration of 'MX_USB_HOST_Init' [-Wimplicit-int]
../Core/Src/main.c:107:3: error: conflicting types for 'MX_USB_HOST_Init'; have 'int()'
In file included from ../Core/Src/main.c:21:
../USB_HOST/App/usb_host.h:71:6: note: previous declaration of 'MX_USB_HOST_Init' with type 'void(void)'
   71 | void MX_USB_HOST_Init(void);
      |      ^~~~~~~~~~~~~~~~
../Core/Src/main.c:114:3: error: expected identifier or '(' before 'while'
  114 |   while (1)
      |   ^~~~~
../Core/Src/main.c:123:1: error: expected identifier or '(' before '}' token
  123 | }
      | ^
../Core/Src/main.c:175:13: error: conflicting types for 'MX_I2C1_Init'; have 'void(void)'
  175 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:104:3: note: previous declaration of 'MX_I2C1_Init' with type 'int()'
  104 |   MX_I2C1_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:209:13: error: conflicting types for 'MX_I2S3_Init'; have 'void(void)'
  209 | static void MX_I2S3_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:105:3: note: previous declaration of 'MX_I2S3_Init' with type 'int()'
  105 |   MX_I2S3_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:243:13: error: conflicting types for 'MX_SPI1_Init'; have 'void(void)'
  243 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:106:3: note: previous declaration of 'MX_SPI1_Init' with type 'int()'
  106 |   MX_SPI1_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:281:13: error: conflicting types for 'MX_GPIO_Init'; have 'void(void)'
  281 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:103:3: note: previous declaration of 'MX_GPIO_Init' with type 'int()'
  103 |   MX_GPIO_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:281:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  281 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:243:13: warning: 'MX_SPI1_Init' defined but not used [-Wunused-function]
  243 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:209:13: warning: 'MX_I2S3_Init' defined but not used [-Wunused-function]
  209 | static void MX_I2S3_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:175:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  175 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

12:56:42 Build Failed. 14 errors, 18 warnings. (took 296ms)

